# ecs

./: CMakeLists.txt  LICENSE  README.md
docs/: readme.txt
examples/: CMakeLists.txt  EcsExample.cpp
examples/components/: DrawComponent.hh  PositionComponent.hh  TimerComponent.hh
examples/systems/: DrawSystem.hh  PositionSystem.hh  TimerSystem.hh  WinnerSystem.hh
include/: Advanced.hh  Call.hh  Ecs.hh
src/: CMakeLists.txt  Ecs.cpp
tests/: CMakeLists.txt  EcsTests.cpp  Streams.hh  main.cpp
